--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "test": "npm run lint && mocha ./node_modules/html-tests/task-stub/test",
-    "lint": "stylelint *.css **/*.css && html-validator --file index.html --verbose && htmllint *.html"
+    "test": "mocha ./node_modules/html-tests/task-stub/test"
   },
   "dependencies": {
     "html-tests": "1.0.2",
